--- a/style.css
+++ b/style.css
@@ -5,7 +5,33 @@
     --black: #222831;
     --overlay: #dddddd2a;
 }
-
+#popup {
+    display: none; /* Hidden by default */
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width:700px;
+    height:700px;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white;
+    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 15px;
+}
+h2 {
+    font-size:50px;
+}
+h5 {
+    font-size:30px;
+}
+#res, #res2 {
+    font-size:24px;
+}
+#myChart {
+    width: 100%; 
+    height: 200px;
+}
 /* nav */
 .nav {
     color: white;
