--- a/style1.css
+++ b/style1.css
@@ -101,7 +101,17 @@ a {
 body {
     background-color: var(--bg) !important;
 }
-
+.popup {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0, 0, 0, 0.7); /* Dark background with opacity */
+    backdrop-filter: blur(5px); /* Blurring effect */
+}
 .container {
     padding-top: 5vw;
     display: flex;
