--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ color:white;
 background-color:black;
 
 }
+#mybutton{
+    width:200px;
+    background-color: #7EDEE2;
+    border-radius:15px;
+}
 
 .nav-item {
     font-size: 2vh;
